# layer_management

./: .gitignore  AUTHORS.txt  CMakeLists.txt  Doxyfile  GeniviDemo.sh  LICENSE.txt  LayerManager.spec.in  NOTICE  README  RELEASE_NOTES.txt  distfiles  generate_specification.sh  makefile  toolchain.cmake
LayerManagerClient/ilmClient/: CMakeLists.txt  makefile
LayerManagerClient/ilmClient/include/: Doxyfile  ilm_client.h  ilm_client_platform.h  ilm_client_priv.h  ilm_types.h
LayerManagerClient/ilmClient/src/: generic_ilm_client.c  ilm_client.c  ilm_client_priv.c
LayerManagerClient/ilmClient/tests/: CMakeLists.txt  IlmCommandTest.cpp
LayerManagerCommands/: CMakeLists.txt
LayerManagerCommands/include/: BaseCommandAsynchronous.h  BaseCommandSynchronous.h  CommitCommand.h  CreateCommand.h  CreateShaderCommand.h  DebugCommand.h  DestroyShaderCommand.h  ExitCommand.h  GetDimensionCommand.h  GetOpacityCommand.h  GetOptimizationModeCommand.h  GetOrientationCommand.h  GetPixelformatCommand.h  GetPositionCommand.h  GetVisibilityCommand.h  LayerAddSurfaceCommand.h  LayerCreateCommand.h  LayerDumpCommand.h  LayerGetDimensionCommand.h  LayerGetOpacityCommand.h  LayerGetOrientationCommand.h  LayerGetPositionCommand.h  LayerGetVisibilityCommand.h  LayerRemoveCommand.h  LayerRemoveSurfaceCommand.h  LayerSetChromaKeyCommand.h  LayerSetDestinationRectangleCommand.h  LayerSetDimensionCommand.h  LayerSetOpacityCommand.h  LayerSetOrientationCommand.h  LayerSetPositionCommand.h  LayerSetRenderOrderCommand.h  LayerSetSourceRectangleCommand.h  LayerSetTypeCommand.h  LayerSetVisibilityCommand.h  LayergroupAddLayerCommand.h  LayergroupCreateCommand.h  LayergroupGetOpacityCommand.h  LayergroupGetVisibilityCommand.h  LayergroupRemoveCommand.h  (+54 more)
LayerManagerCommands/src/: CommitCommand.cpp  CreateCommand.cpp  CreateShaderCommand.cpp  DebugCommand.cpp  DestroyShaderCommand.cpp  ExitCommand.cpp  GetDimensionCommand.cpp  GetOpacityCommand.cpp  GetOptimizationModeCommand.cpp  GetOrientationCommand.cpp  GetPixelformatCommand.cpp  GetPositionCommand.cpp  GetVisibilityCommand.cpp  LayerAddSurfaceCommand.cpp  LayerCreateCommand.cpp  LayerDumpCommand.cpp  LayerGetDimensionCommand.cpp  LayerGetOpacityCommand.cpp  LayerGetOrientationCommand.cpp  LayerGetPositionCommand.cpp  LayerGetVisibilityCommand.cpp  LayerRemoveCommand.cpp  LayerRemoveSurface.cpp  LayerRemoveSurfaceCommand.cpp  LayerSetChromaKeyCommand.cpp  LayerSetDestinationRectangleCommand.cpp  LayerSetDimensionCommand.cpp  LayerSetOpacityCommand.cpp  LayerSetOrientationCommand.cpp  LayerSetPositionCommand.cpp  LayerSetRenderOrderCommand.cpp  LayerSetSourceRectangleCommand.cpp  LayerSetTypeCommand.cpp  LayerSetVisibilityCommand.cpp  LayergroupAddLayerCommand.cpp  LayergroupCreateCommand.cpp  LayergroupGetOpacityCommand.cpp  LayergroupGetVisibilityCommand.cpp  LayergroupRemoveCommand.cpp  LayergroupRemoveLayerCommand.cpp  (+53 more)
LayerManagerPlugins/Communicators/DBUSCommunicator/: CMakeLists.txt  compositeServiceDescription.xml  generateBinding.sh  makefile
LayerManagerPlugins/Communicators/DBUSCommunicator/include/: DBUSCommunicator.h  DBUSConfiguration.h  DBUSIntrospection.h  DBUSMessageHandler.h  DBUSTypes.h  LayerManagerService.conf
LayerManagerPlugins/Communicators/DBUSCommunicator/src/: DBUSCommunicator.cpp  DBUSIntrospection.cpp  DBUSMessageHandler.cpp
LayerManagerPlugins/Communicators/DBUSCommunicator/test/: CMakeLists.txt  DBUSCommunicatorTest.cpp  mock_CommandExecutor.h  mock_Communicator.h  mock_Layerlist.h  mock_Renderer.h
LayerManagerPlugins/Communicators/GenericCommunicator/: CMakeLists.txt
LayerManagerPlugins/Communicators/GenericCommunicator/include/: GenericCommunicator.h
LayerManagerPlugins/Communicators/GenericCommunicator/src/: GenericCommunicator.cpp
LayerManagerPlugins/Renderers/Graphic/: CMakeLists.txt
LayerManagerPlugins/Renderers/Graphic/tests/: CMakeLists.txt  (+1 more)
LayerManagerPlugins/SceneProvider/ExampleSceneProvider/: CMakeLists.txt
LayerManagerService/: CMakeLists.txt  makefile
LayerManagerService/include/: .gitignore  ApplicationReferenceMap.h  BaseCommunicator.h  CmakeConfiguration.h.in  CommandExecutor.h  Configuration.h  GraphicalGroup.h  GraphicalObject.h  GraphicalSurface.h  HealthDefault.h  HealthSystemd.h  IApplicationReference.h  ICommand.h  ICommandExecutor.h  ICommunicator.h  ICommunicatorClient.h  IHealth.h  IHealthMonitor.h  ILayerList.h  IPlugin.h  IRenderer.h  IScene.h  ISceneProvider.h  InputManager.h  Layer.h  LayerCapabilities.h  LayerList.h  LayerType.h  Layermanager.h  LogicalGraphicsObject.h  ObjectType.h  Orientation.h  OrientationType.h  PixelFormat.h  PlatformSurface.h  PluginBase.h  PluginManager.h  Rectangle.h  Scene.h  ScreenShotType.h  (+11 more)
LayerManagerService/include/commands/: Command.h  CommitCommand.h  CreateCommand.h  CreateShaderCommand.h  DebugCommand.h  DestroyShaderCommand.h  ExitCommand.h  GetDimensionCommand.h  GetOpacityCommand.h  GetOrientationCommand.h  GetPixelformatCommand.h  GetPositionCommand.h  GetVisibilityCommand.h  LayerAddSurfaceCommand.h  LayerRemoveSurface.h  LayergroupAddLayerCommand.h  LayergroupRemoveLayerCommand.h  RemoveCommand.h  ScreenShotCommand.h  SetDestinationRectangleCommand.h  SetDimensionCommand.h  SetLayerOrderCommand.h  SetOpacityCommand.h  SetOrderWithinLayerCommand.h  SetOrientationCommand.h  SetPositionCommand.h  SetShaderCommand.h  SetSourceRectangleCommand.h  SetUniformsCommand.h  SetVisibilityCommand.h  SurfacegroupAddSurfaceCommand.h  SurfacegroupRemoveSurfaceCommand.h
LayerManagerService/src/: Configuration.cpp  GraphicalSurface.cpp  HealthSystemd.cpp  InputManager.cpp  LayerList.cpp  Layermanager.cpp  LogicalGraphicsObject.cpp  PluginBase.cpp  PluginManager.cpp  Scene.cpp  SignalHandler.cpp  main.cpp
LayerManagerService/src/shader/: Shader.cpp  ShaderProgram.cpp  ShaderProgramFactory.cpp  ShaderUniform.cpp
LayerManagerService/tests/: GraphicalGroupTest.cpp  GraphicalObjectTest.cpp  GraphicalSurfaceTest.cpp  InputManagerTest.cpp  LayerTest.cpp  LayermanagerTest.cpp  RectangleTest.cpp  SceneTest.cpp  ShaderTest.cpp  SurfaceTest.cpp
(+312 files in other folders)
